Fix graph
Squashed bug where graph would not update when a new currency was selected.

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,12 @@ body {
 #navbar {
   margin-top: 20px;
 }
+
+#footer {
+  display: flex;
+}
+
+#footer-text {
+  flex: 1;
+  color: white;
+}
